Date: Wed,  4 Feb 2015 16:53:39 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.5.2)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.5.3 2015-02-XX Marc-Etienne Vargenau ==

* Fix Bug#648 Call to protected method
* easier file upload: forbidden characters in filename are replaced by dashes (instead of rejecting upload)
* improve handling of image insertion icon in edit toolbar (icon did not always appear after image uploading)
* bigger wikipaging font
* test again for function 'posix_times', it does not exist on Windows (reported by jdebert)
* remove FPDF, lib/gif.php, lib/font (was not used)
* rename plugin _Retransform to ~DebugRetransform
* use PHP ZIP class instead of home-made functions
* add SOAP scripts

== 1.5.2 2014-10-10 Marc-Etienne Vargenau ==

This is a security fix release.
* Fix CVE-2014-5519: vulnerability in Ploticus plugin. [[http://www.cvedetails.com/cve/CVE-2014-5519/]] 

This vulnerability is present in ~PhpWiki 1.5.0 and 1.5.1. All users are advised to upgrade to ~PhpWiki 1.5.2.

== 1.5.1 2014-10-02 Marc-Etienne Vargenau ==

* fix Bug#456 'Optimizing Database' message sometimes printed on page
* remove ~FrameInclude plugin (frames are not supported in HTML 5)
* sort tables with [[http://tablesorter.com|tablesorter jQuery plugin]] instead of sortable.js
* fix Bug#636 Recursive include is not trapped
* fix Bug#647 undefined method WikiDB_backend_dba::WikiDB_backend_dbaBase
* correct total number of pages for AllPagesCreatedByMe, AllPagesOwnedByMe, AllPagesLastEditedByMe
* fix Bug#607 BackLinks do not work inside a [[Help:RichTablePlugin|RichTable]]
* fix Bug#646 Wrong number of links in BackLinks
* make <includeonly> work
* remove old ~WikiUser code (ENABLE_USER_NEW)
* admin always has rights to see and modify pages, regardless of ACLs, to avoid locking himself out