@@ -1,13 +1,11 @@
 <?php
 
 /**
- * FCKeditor is compatible with most internet browsers which
- * include: IE 5.5+ (Windows), Firefox 1.0+, Mozilla 1.3+
- * and Netscape 7+.
+ * CKeditor is compatible with most internet browsers
  *
- * Download: http://fckeditor.net/
- * Suggested installation into themes/default/FCKeditor/
- * or the default /FCKeditor/. See $this->BasePath below.
+ * Download: http://ckeditor.com/
+ * Suggested installation into themes/default/CKeditor/
+ * or the default /CKeditor/. See $this->BasePath below.
  *
  * @package WysiwygEdit
  * @author Reini Urban
@@ -15,42 +13,42 @@
 
 require_once 'lib/WysiwygEdit.php';
 
-class WysiwygEdit_FCKeditor extends WysiwygEdit
+class WysiwygEdit_CKeditor extends WysiwygEdit
 {
 
     function __construct()
     {
         global $LANG;
         $this->_transformer_tags = false;
-        $this->BasePath = DATA_PATH . '/themes/default/FCKeditor/';
-        $this->_htmltextid = "edit-content"; // FCKEditor1;
+        $this->BasePath = DATA_PATH . '/themes/default/CKeditor/';
+        $this->_htmltextid = "edit-content"; // CKEditor1;
         $this->_wikitextid = "editareawiki";
         $this->_jsdefault = "
-oFCKeditor.BasePath = '$this->BasePath';
-oFCKeditor.Height = 300;
-// oFCKeditor.ToolbarSet = 'Basic' ;
-oFCKeditor.Config.DefaultLanguage = '$LANG';
-oFCKeditor.Config.LinkBrowserURL  = oFCKeditor.BasePath + 'editor/filemanager/browser/default/browser.html?Connector=connectors/php/connector.php';
-oFCKeditor.Config.ImageBrowserURL = oFCKeditor.BasePath + 'editor/filemanager/browser/default/browser.html?Type=Image&Connector=connectors/php/connector.php';
+oCKeditor.BasePath = '$this->BasePath';
+oCKeditor.Height = 300;
+// oCKeditor.ToolbarSet = 'Basic' ;
+oCKeditor.Config.DefaultLanguage = '$LANG';
+oCKeditor.Config.LinkBrowserURL  = oCKeditor.BasePath + 'editor/filemanager/browser/default/browser.html?Connector=connectors/php/connector.php';
+oCKeditor.Config.ImageBrowserURL = oCKeditor.BasePath + 'editor/filemanager/browser/default/browser.html?Type=Image&Connector=connectors/php/connector.php';
 ";
         if (!empty($_REQUEST['start_debug']))
-            $this->_jsdefault = "\noFCKeditor.Config.Debug = true;";
+            $this->_jsdefault = "\noCKeditor.Config.Debug = true;";
     }
 
     function Head($name = 'edit[content]')
     {
         global $WikiTheme;
         $WikiTheme->addMoreHeaders
-        (Javascript('', array('src' => $this->BasePath . 'fckeditor.js',
+        (Javascript('', array('src' => $this->BasePath . 'ckeditor.js',
             'language' => 'JavaScript')));
         return JavaScript("
 window.onload = function()
 {
-var oFCKeditor = new FCKeditor( '$this->_htmltextid' ) ;"
+var oCKeditor = new CKeditor( '$this->_htmltextid' ) ;"
             . $this->_jsdefault . "
 // force textarea in favor of iFrame?
-// oFCKeditor._IsCompatibleBrowser = function() { return false; }
-oFCKeditor.ReplaceTextarea();
+// oCKeditor._IsCompatibleBrowser = function() { return false; }
+oCKeditor.ReplaceTextarea();
 }");
     }
 
@@ -65,10 +63,10 @@ oFCKeditor.ReplaceTextarea();
         $htmltextid = $name;
         $out = HTML(
             JavaScript("
-var oFCKeditor = new FCKeditor( '$htmltextid' ) ;
-oFCKeditor.Value = '" . $textarea->_content[0]->asXML() . "';"
+var oCKeditor = new CKeditor( '$htmltextid' ) ;
+oCKeditor.Value = '" . $textarea->_content[0]->asXML() . "';"
                 . $this->_jsdefault . "
-oFCKeditor.Create();"),
+oCKeditor.Create();"),
             HTML::div(array("id" => $this->_wikitextid,
                     'style' => 'display:none'),
                 $wikitext),
@@ -93,18 +91,18 @@ oFCKeditor.Create();"),
     function Textarea_PHP($textarea, $wikitext, $name = 'edit[content]')
     {
         global $LANG;
-        $this->FilePath = realpath(PHPWIKI_DIR . '/themes/default/FCKeditor') . "/";
+        $this->FilePath = realpath(PHPWIKI_DIR . '/themes/default/CKeditor') . "/";
 
         $htmltextid = "edit-content";
 
-        include_once($this->FilePath . 'fckeditor.php');
-        $this->oFCKeditor = new FCKeditor($htmltextid);
-        $this->oFCKeditor->BasePath = $this->BasePath;
-        $this->oFCKeditor->Value = $textarea->_content[0]->asXML();
+        include_once($this->FilePath . 'ckeditor.php');
+        $this->oCKeditor = new CKeditor($htmltextid);
+        $this->oCKeditor->BasePath = $this->BasePath;
+        $this->oCKeditor->Value = $textarea->_content[0]->asXML();
 
-        $this->oFCKeditor->Config['AutoDetectLanguage'] = true;
-        $this->oFCKeditor->Config['DefaultLanguage'] = $LANG;
-        $this->oFCKeditor->Create();
+        $this->oCKeditor->Config['AutoDetectLanguage'] = true;
+        $this->oCKeditor->Config['DefaultLanguage'] = $LANG;
+        $this->oCKeditor->Create();
 
         return HTML::div(array("id" => $this->_wikitextid,
                 'style' => 'display:none'),
